// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrowdsaleStartTime  should render CrowdsaleStartTime component 1`] = `
<div
  className={undefined}
>
  <label
    className="label"
    htmlFor="name"
  >
    Start Time
  </label>
  <input
    autoComplete="off"
    className="input"
    disabled={false}
    id="name"
    name="name"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder={undefined}
    type="datetime-local"
    value=""
  />
  <p
    className="description"
  >
    Date and time when the tier starts. Can't be in the past from the current moment.
  </p>
  <span>
    <p
      className="error"
      style={
        Object {
          "color": "red",
          "fontWeight": "bold",
        }
      }
    />
    <p
      className="error"
      style={
        Object {
          "color": "red",
          "fontWeight": "bold",
        }
      }
    />
    <p
      className="error"
      style={
        Object {
          "color": "red",
          "fontWeight": "bold",
        }
      }
    />
  </span>
</div>
`;

exports[`CrowdsaleStartTime  should render MinCap component if field is disabled 1`] = `
<div
  className={undefined}
>
  <label
    className="label"
    htmlFor="name"
  >
    Start Time
  </label>
  <input
    autoComplete="off"
    className="input"
    disabled={true}
    id="name"
    name="name"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder={undefined}
    type="datetime-local"
    value=""
  />
  <p
    className="description"
  >
    Date and time when the tier starts. Can't be in the past from the current moment.
  </p>
  <span>
    <p
      className="error"
      style={
        Object {
          "color": "red",
          "fontWeight": "bold",
        }
      }
    />
  </span>
</div>
`;
